# uniwa-computer-vision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: classifier.yaml  generation.yaml  lora_sd15.yaml  lora_sdxl.yaml  preprocess.yaml
docs/: datasets.md  methodology.md  results.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing_demo.ipynb  03_diffusion_generation.ipynb  04_evaluation.ipynb  kaggle_proxy_run.ipynb  kernel-metadata.json
notebooks/genonly/: kaggle_genonly_run.ipynb  kernel-metadata.json
notebooks/lora_v7_4000steps/: README.md  config.json  training_log.jsonl
report/: Makefile  README.md  references.bib  report.md  report.tex  slides.tex
scripts/: build_kaggle_genonly_notebook.py  build_kaggle_notebook.py  download_data.sh  run_on_kaggle.py  run_pipeline.py
src/cv_diffusion/: __init__.py
src/cv_diffusion/cli/: __init__.py  _shared.py  evaluate.py  generate.py  preprocess.py  train_classifier.py  train_lora.py
src/cv_diffusion/evaluation/: __init__.py  downstream.py  fid.py  ssim.py
src/cv_diffusion/generation/: __init__.py  generate.py
src/cv_diffusion/models/: __init__.py  classifier.py  diffusion.py  lora.py
src/cv_diffusion/preprocessing/: __init__.py  dataset.py  normalize.py  prompts.py  spectral.py  tile.py
src/cv_diffusion/training/: __init__.py  train_classifier.py  train_lora.py
src/cv_diffusion/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: conftest.py  test_cli_help.py  test_config.py  test_dataset.py  test_io_and_seed.py  test_normalize.py  test_spectral.py  test_tile.py
